force-app/main/default/objects/Screening_Form__c/Screening_Form__c.object-meta.xml
<CustomObject>
    <label>Screening Form</label>
    <nameField>
        <displayFormat>SCR-{0000}</displayFormat>
        <label>Screening</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Screening Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>