force-app/main/default/objects/Screening_Form__c/fields/Mobile_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_Code__c</fullName>
    <label>Mobile Country Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>